feat: submit debugging

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,27 +22,28 @@
             <!-- Email-Feld -->
             <div class="input-wrapper">
               <input class="mail-icon" type="email" placeholder="Email" formControlName="email"
-                [class.error-border]="form.get('email')?.invalid && (form.get('email')?.dirty || form.get('email')?.touched)" type="email">
+                [class.error-border]="form.get('email')?.invalid && (form.get('email')?.dirty || form.get('email')?.touched) || errorMessage"
+                type="email">
             </div>
             <!-- Passwort-Feld mit Bild-Logik -->
             <div class="input-wrapper">
               <input #pwInput class="lock-icon" [type]="showPassword ? 'text' : 'password'" placeholder="Password"
                 formControlName="password" (focus)="isFocused = true" (blur)="isFocused = false"
                 (input)="checkPasswordInput()"
-                [class.error-border]="form.get('password')?.invalid && (form.get('password')?.dirty || form.get('password')?.touched)">
+                [class.error-border]="(form.get('password')?.invalid && (form.get('password')?.dirty || form.get('password')?.touched)) || errorMessage">
               <img [src]="lockIconSrc" alt="Lock Icon" class="lock-image" (click)="checkLockClick(pwInput)">
             </div>
             <!-- Fehlertext -->
 
             <div class="error-text">
-
-              <p>{{ errorMessage }}</p>
-
-              @if (this.form.invalid && this.form.touched) {
+              @if (errorMessage != null) {
+                <p>{{ errorMessage }}</p>
+              }
+              <!--               @if (this.form.invalid && this.form.touched) {
 
               <p>Check your email and password.</p>
               }
-
+ -->
             </div>
             <!-- Buttons -->
             <div class="form-btn">
@@ -59,8 +60,8 @@
     </div>
     <footer>
       <div class="footer-content">
-    <a [routerLink]="'/privacy-sign-in'">Privacy Policy</a>
-    <a [routerLink]="'/legal-notice-sign-in'">Legal notice</a>
+        <a [routerLink]="'/privacy-sign-in'">Privacy Policy</a>
+        <a [routerLink]="'/legal-notice-sign-in'">Legal notice</a>
       </div>
     </footer>
   </div>
