--- a/src/app/signup-overlay/signup-overlay.component.scss
+++ b/src/app/signup-overlay/signup-overlay.component.scss
@@ -120,6 +120,7 @@ section{
             padding-right: 3em;
             }
             .absoluteimg{
+                cursor: pointer;
                 position: absolute;
                 right: 1.5em;
                 top: 50%;
