--- a/src/app/summary/summary-content/summary-content.component.html
+++ b/src/app/summary/summary-content/summary-content.component.html
@@ -55,7 +55,7 @@
       <div class="progression-tasks">
         <div class="hover-container">
           <div class="small-menu-point">
-            <h4>{{ getFilteredTasks().length }}</h4>
+            <h4>{{ boardService.taskList.length }}</h4>
             <span class="text-input">Tasks in <br> Board</span>
           </div>
         </div>
