--- a/src/app/shared/help-me/help-me.component.scss
+++ b/src/app/shared/help-me/help-me.component.scss
@@ -80,7 +80,7 @@
     width: 5.5em;
     background-image: url('./../../../../public/assets/img/info-screen/arrow-left-line.png');
     @media(min-width:750px){
-        position: fixed;
+        position: relative;
         right: 1em;
     }
 }
