--- a/src/app/shared/legal-notice-sign-in/legal-notice-sign-in.component.scss
+++ b/src/app/shared/legal-notice-sign-in/legal-notice-sign-in.component.scss
@@ -187,6 +187,7 @@ header {
     font-family: sans-serif;
     overflow-wrap: break-word;
     overflow-y: auto;
+        max-width: 1920px;
 
     h2,
     h3,
