--- a/src/app/shared/legal-notice/legal-notice.component.scss
+++ b/src/app/shared/legal-notice/legal-notice.component.scss
@@ -25,6 +25,7 @@
     font-family: sans-serif;
     overflow-wrap: break-word;
     overflow-y: auto;
+        max-width: 1920px;
 
     h1 {
         margin-top: 8dvh;
