--- a/src/app/kanban/kanban-board/card/card.component.html
+++ b/src/app/kanban/kanban-board/card/card.component.html
@@ -19,7 +19,7 @@
         <img src="assets/img/kanban-board/mobileMoveToButton.png" alt="">
       </div>
     </div>
-    <div class="tite">
+    <div class="title">
       <h4>{{task.title}}</h4>
     </div>
     <div class="description">
