--- a/src/app/kanban/kanban-board/full-card/full-card.component.scss
+++ b/src/app/kanban/kanban-board/full-card/full-card.component.scss
@@ -121,8 +121,10 @@ section {
     .description {
         /*     white-space: nowrap;
  */
-        overflow: hidden;
-        text-overflow: ellipsis;
+
+          white-space: normal;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
     }
 
     .input {
@@ -234,6 +236,9 @@ section {
 
 .title {
     font-size: 61px;
+      white-space: normal;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .close-button {
