--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -100,6 +100,7 @@
 
             //#region info container
             .info-container {
+                    flex-wrap: wrap;
                 display: flex;
                 align-items: center;
                 flex: 1;
