catch empty strings for editing subtasks

--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.html
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.html
@@ -156,7 +156,7 @@
 							@if (editingSubtaskIndex === $index) {
 							<li (click)="$event.stopPropagation()">
 								<textarea [(ngModel)]="pushedSubtask.text"></textarea>
-								<button (click)="spliceSubtask()">
+								<button (click)="spliceSubtask($index)">
                                     <img src="assets/img/kanban-add/subTaskDeleteButton.png" alt="delete">
 								</button>
 								<button (click)="saveEditingSubtask($index); $event.stopPropagation()">
