Disable manual input for due date fields
Added 'onkeydown="return false;"' to date input fields in kanban-add-overlay and kanban-edit components to prevent manual typing and enforce date selection via the picker.

--- a/src/app/kanban/kanban-edit/kanban-edit.component.html
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.html
@@ -16,7 +16,7 @@
                     </div>
                     <div class="form-date kanban-div">
                         <span>Due date</span>
-                        <input type="date" [(ngModel)]="task.dueDate" name="taskDate" [min]="currentDate"/>
+                        <input type="date" [(ngModel)]="task.dueDate" name="taskDate" [min]="currentDate" onkeydown="return false;"/>
                     </div>
                 </form>
 
