Refactor subtask editing logic and update assets
Removed redundant editingSubtaskValue variable and refactored subtask editing to work directly with the array in Kanban components. Updated phone input type to 'tel' in contacts overlay. Changed navbar image assets and adjusted nav-footer styles for improved alignment.

--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.html
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.html
@@ -98,7 +98,7 @@
                 }
               </div>
 
-              <input [(ngModel)]="overlayState.selectedUser.phone" class="phone" type="number" placeholder="Phone"
+              <input [(ngModel)]="overlayState.selectedUser.phone" class="phone" type="tel" placeholder="Phone"
                 name="phone" required pattern="^\+?[0-9\s]{6,16}$" id="phone" #phone="ngModel"
                 [class.invalid]=" phone.invalid && phone.dirty " maxlength="15"/>
               <div class="invalid-input">
