--- a/src/app/shared/nav-footer/nav-footer.component.scss
+++ b/src/app/shared/nav-footer/nav-footer.component.scss
@@ -43,6 +43,7 @@ section {
                     color: white;
                     text-align: center;
                     display: flex;
+                    justify-content: flex-start;
                     align-items: center;
                     width: 100%;
 
