--- a/src/app/contacts/info-screen-mobile/info-screen-mobile.component.html
+++ b/src/app/contacts/info-screen-mobile/info-screen-mobile.component.html
@@ -86,7 +86,7 @@
                 <p class="contactinfos">Contact Information</p>
                 <div class="mailbox">
                     <p class="mail-phone">Email</p>
-                    <a href="mailto:">{{ overlayState.selectedUser.email }}</a>
+                    <a href="mailto:"><p>{{ overlayState.selectedUser.email }}</p></a>
                 </div>
                 <div class="phonebox">
                     <p class="mail-phone">Phone</p>
