--- a/src/app/contacts/info-screen-mobile/info-screen-mobile.component.scss
+++ b/src/app/contacts/info-screen-mobile/info-screen-mobile.component.scss
@@ -106,7 +106,7 @@
 
                 //#region info container
                 .info-container {
-                        flex-wrap: wrap;
+                    flex-wrap: wrap;
                     display: flex;
                     align-items: center;
                     flex: 1;
@@ -121,7 +121,8 @@
                         background: #ff7a00;
                         border: 0.3em solid white;
                         border-radius: 50%;
-                        box-shadow: 0px 0px 4px 1px rgba($color: #000000, $alpha: 0.2);
+                        box-shadow: 0px 0px 4px 1px
+                            rgba($color: #000000, $alpha: 0.2);
 
                         p {
                             font-size: 3.2em;
@@ -147,7 +148,7 @@
                             }
 
                             @media (max-width: 1040px) {
-                                font-size: 3em;
+                                font-size: 2em;
                             }
                         }
 
@@ -211,9 +212,16 @@
                     font-size: 1.6em;
                     margin-left: 2.8em;
                     color: #007cee;
+                    width: 100%;
 
-                    @media (max-width: 1075px) {
-                        margin-left: 2em;
+                    p {
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+
+                        @media (max-width: 1075px) {
+                            margin-left: 2em;
+                        }
                     }
                 }
 
@@ -234,74 +242,73 @@
     }
 }
 
-        //#region mobile edit Button              
-        .edit-mobilebtn {
-            display: flex;
-            position: absolute;
-            justify-content: center;
-            align-items: center;
-            top: 87%;
-            right: 27px;
-            width: 56px;
-            height: 56px;
-            background: #2a3647;
-            border-radius: 50%;
-            cursor: pointer;
+//#region mobile edit Button
+.edit-mobilebtn {
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    top: 87%;
+    right: 27px;
+    width: 56px;
+    height: 56px;
+    background: #2a3647;
+    border-radius: 50%;
+    cursor: pointer;
 
-            //#region Responsive Edit Mobil Button
-            @media (min-width: 1300px) {
-                display: none;
-            }
+    //#region Responsive Edit Mobil Button
+    @media (min-width: 1300px) {
+        display: none;
+    }
 
-            //#endregion
+    //#endregion
 
-            &:hover {
-                background: #29abe2;
-            }
+    &:hover {
+        background: #29abe2;
+    }
 
-            .dropdown-menu {
-                font-size: 10px;
-                position: absolute;
-                right: 0em;
-                background-color: white;
-                border-radius: 20px;
-                border-bottom-right-radius: 0;
-                box-shadow: 6px 4px 10px rgba(0, 0, 0, 0.274);
-                width: 120px;
-                z-index: 100;
-                animation: fade-in-left 0.5s ease-in-out;
-            }
+    .dropdown-menu {
+        font-size: 10px;
+        position: absolute;
+        right: 0em;
+        background-color: white;
+        border-radius: 20px;
+        border-bottom-right-radius: 0;
+        box-shadow: 6px 4px 10px rgba(0, 0, 0, 0.274);
+        width: 120px;
+        z-index: 100;
+        animation: fade-in-left 0.5s ease-in-out;
+    }
 
-            .dropdown-menu div {
-                display: flex;
-                align-items: center;
-                padding: 1.5em 2em 1.5em 2em;
-                cursor: pointer;
-            }
+    .dropdown-menu div {
+        display: flex;
+        align-items: center;
+        padding: 1.5em 2em 1.5em 2em;
+        cursor: pointer;
+    }
 
-            .edit {
-                display: flex;
-                justify-content: start;
-                align-items: center;
-            }
+    .edit {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+    }
 
-            .dropdown-menu div:hover {
-                background-color: #f0f0f0;
-                border-radius: 20px;
-                border-bottom-right-radius: 0;
-            }
+    .dropdown-menu div:hover {
+        background-color: #f0f0f0;
+        border-radius: 20px;
+        border-bottom-right-radius: 0;
+    }
 
-            .dropdown-menu img {
-                width: 2em;
-                height: 2em;
-                margin-right: 1em;
-            }
+    .dropdown-menu img {
+        width: 2em;
+        height: 2em;
+        margin-right: 1em;
+    }
 
-            p {
-                font-size: 1.5em;
-            }
-            
-        }
+    p {
+        font-size: 1.5em;
+    }
+}
 
 .overlay {
     position: fixed;
