--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -100,14 +100,16 @@
 
             //#region info container
             .info-container {
-                    flex-wrap: wrap;
+                flex-wrap: wrap;
                 display: flex;
                 align-items: center;
                 flex: 1;
                 animation: fade-in-left 0.75s ease-in-out;
 
                 .initiales-bg {
-                    margin-left: 4em;
+                    margin-top: 1em;
+                    margin-left: 5em;
+                    margin-bottom: 3em;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -116,54 +118,64 @@
                     background: #ff7a00;
                     border: 0.3em solid white;
                     border-radius: 50%;
-                    box-shadow: 0px 0px 4px 1px rgba($color: #000000, $alpha: 0.2);
+                    box-shadow: 0px 0px 4px 1px
+                        rgba($color: #000000, $alpha: 0.2);
 
                     @media (max-width: 1130px) {
-                        width: 9em;
-                        height: 9em;
+                        width: 8em;
+                        height: 8em;
                     }
 
                     @media (max-width: 1075px) {
-                        margin-left: 2em;
+                        margin-left: 1em;
+                        margin-bottom: 1em;
                     }
 
                     @media (max-width: 345px) {
-                        width: 7em;
-                        height: 7em;
+                        width: 6em;
+                        height: 6em;
                     }
 
                     p {
-                        font-size: 4.7em;
+                        font-size: 4.5em;
                         color: white;
 
                         @media (max-width: 1130px) {
-                            font-size: 4.2em;
+                            font-size: 4em;
                         }
 
                         @media (max-width: 330px) {
-                            font-size: 3.4em;
+                            font-size: em;
                         }
                     }
                 }
 
                 .name-user {
-                    height: 16em;
+                    height: 12em;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     align-items: start;
+                    word-break: break-all;
 
                     h2 {
-                        font-size: 4.7em;
+                        font-size: 4.5em;
                         font-weight: 700;
                         margin-left: 0.4em;
 
+                        @media (max-width: 1275px) {
+                            font-size: 4.1em;
+                            margin-left: 0.5em;
+                            margin-right: 0.5em;
+                        }
+
                         @media (max-width: 1160px) {
-                            font-size: 4em;
+                            font-size: 3em;
                         }
 
                         @media (max-width: 1060px) {
-                            font-size: 3em;
+                            font-size: 2.2em;
+                            word-break: break-all;
                         }
 
                         @media (max-width: 345px) {
@@ -184,7 +196,8 @@
                         .delete {
                             display: flex;
                             align-items: center;
-                            font-size: 1.8em;
+                            font-size: 1.6em;
+                            gap: 0.5em;
                             background-color: white;
                             border: none;
                             cursor: pointer;
@@ -193,7 +206,7 @@
 
                             &:hover {
                                 color: #29abe2;
-                                font-size: 1.9em;
+                                font-size: 1.6em;
                             }
                         }
                     }
@@ -206,6 +219,7 @@
             .contactinfos {
                 margin-left: 2.2em;
                 font-size: 2em;
+                margin-top: 1.5em;
                 margin-bottom: 1em;
                 animation: fade-in-left 1s ease-in-out;
 
@@ -222,7 +236,7 @@
                     font-weight: 700;
                     margin-left: 2.8em;
                     margin-bottom: 1em;
-                    margin-top: 2em;
+                    margin-top: 1em;
 
                     @media (max-width: 1075px) {
                         margin-left: 2em;
@@ -233,9 +247,16 @@
                     font-size: 1.6em;
                     margin-left: 2.8em;
                     color: #007cee;
+                    width: 100%;
 
-                    @media (max-width: 1075px) {
-                        margin-left: 2em;
+                    p {
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+
+                        @media (max-width: 1075px) {
+                            margin-left: 2em;
+                        }
                     }
                 }
             }
@@ -265,7 +286,6 @@
                 }
             }
 
-
             //#endregion
         }
 
@@ -289,6 +309,12 @@
 
             @media (max-width: 1300px) {
                 right: 5em;
+                bottom: 50em;
+            }
+
+            @media (max-width: 1100px) {
+                right: 5em;
+                bottom: 50em;
             }
 
             //#endregion
