--- a/src/app/contacts/info-screen/info-screen.component.html
+++ b/src/app/contacts/info-screen/info-screen.component.html
@@ -51,7 +51,7 @@
                 <p class="contactinfos">Contact Information</p>
                 <div class="mailbox">
                     <p class="mail-phone">Email</p>
-                    <a href="mailto:"><p>{{overlayState.selectedUser.email}}</p></a>
+                    <a href="mailto:"><p class="email">{{overlayState.selectedUser.email}}</p></a>
                 </div>
                 <div class="phonebox">
                     <p class="mail-phone">Phone</p>
