--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -247,12 +247,15 @@
                     font-size: 1.6em;
                     margin-left: 2.8em;
                     color: #007cee;
-                    width: 100%;
+                    width: 90%;
+                   
 
-                    p {
+                    .email {
                         white-space: nowrap;
                         text-overflow: ellipsis;
                         overflow: hidden;
+                        margin-left: 2em;
+                        width: 100%;
 
                         @media (max-width: 1075px) {
                             margin-left: 2em;
@@ -308,13 +311,32 @@
             }
 
             @media (max-width: 1300px) {
-                right: 5em;
-                bottom: 50em;
+                left: 35em;
+                top: 44em;
             }
 
             @media (max-width: 1100px) {
-                right: 5em;
-                bottom: 50em;
+                left: 35em;
+                top: 44em;
+            }
+
+            @media (max-width: 1024px) {
+                left: 30em;
+                top: 95em;
+            }
+
+            @media (max-width: 912px) {
+                left: 40em;
+                top: 83em;
+            }
+
+            @media (max-width: 820px) {
+                left: 32em;
+                top: 70em;
+            }
+            @media (max-width: 768px) {
+                left: 28em;
+                top: 57em;
             }
 
             //#endregion
