--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -230,12 +230,14 @@
 
             .mailbox {
                 animation: fade-in-left 0.75s ease-in-out;
+                max-width: 100%;
+
 
                 .mail-phone {
                     font-size: 1.6em;
                     font-weight: 700;
                     margin-left: 2.8em;
-                    margin-bottom: 1em;
+                    margin-bottom: 0.5em;
                     margin-top: 1em;
 
                     @media (max-width: 1075px) {
@@ -245,23 +247,27 @@
 
                 a {
                     font-size: 1.6em;
-                    margin-left: 2.8em;
                     color: #007cee;
-                    width: 90%;
-                   
+                    display: inline-block;
+                    max-width: 100%;
+                    overflow: hidden;
 
                     .email {
                         white-space: nowrap;
                         text-overflow: ellipsis;
                         overflow: hidden;
                         margin-left: 2em;
-                        width: 100%;
+                        max-width: 100%;
+                        display: inline-block;
+                        box-sizing: border-box;
 
                         @media (max-width: 1075px) {
                             margin-left: 2em;
                         }
                     }
                 }
+
+                
             }
 
             .phonebox {
@@ -271,7 +277,7 @@
                     font-size: 1.6em;
                     font-weight: 700;
                     margin-left: 2.8em;
-                    margin-bottom: 1em;
+                    margin-bottom: 0.5em;
                     margin-top: 2em;
 
                     @media (max-width: 1075px) {
