--- a/src/app/contacts/info-screen/info-screen.component.html
+++ b/src/app/contacts/info-screen/info-screen.component.html
@@ -49,9 +49,13 @@
                     </div>
                 </div>
                 <p class="contactinfos">Contact Information</p>
-                <div class="mailbox">
+                <!-- <div class="mailbox">
                     <p class="mail-phone">Email</p>
                     <a href="mailto:"><p class="email">{{overlayState.selectedUser.email}}</p></a>
+                </div> -->
+                <div class="mailbox">
+                    <p class="mail-phone">Email</p>
+                    <a href="mailto:" class="email-link">{{overlayState.selectedUser.email}}</a>
                 </div>
                 <div class="phonebox">
                     <p class="mail-phone">Phone</p>
