--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -145,7 +145,7 @@
                         }
 
                         @media (max-width: 330px) {
-                            font-size: em;
+                            font-size: 1.6em;
                         }
                     }
                 }
@@ -228,46 +228,37 @@
                 }
             }
 
+          
             .mailbox {
                 animation: fade-in-left 0.75s ease-in-out;
-                max-width: 100%;
+                max-width: 300px; 
 
-
-                .mail-phone {
+                .email-link {
                     font-size: 1.6em;
-                    font-weight: 700;
                     margin-left: 2.8em;
-                    margin-bottom: 0.5em;
-                    margin-top: 1em;
+                    color: #007cee;
+                    display: inline-block;
+                    max-width: 100%;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
 
                     @media (max-width: 1075px) {
                         margin-left: 2em;
                     }
                 }
 
-                a {
+                .mail-phone {
                     font-size: 1.6em;
-                    color: #007cee;
-                    display: inline-block;
-                    max-width: 100%;
-                    overflow: hidden;
+                    font-weight: 700;
+                    margin-left: 2.8em;
+                    margin-bottom: 1em;
+                    margin-top: 1em;
 
-                    .email {
-                        white-space: nowrap;
-                        text-overflow: ellipsis;
-                        overflow: hidden;
+                    @media (max-width: 1075px) {
                         margin-left: 2em;
-                        max-width: 100%;
-                        display: inline-block;
-                        box-sizing: border-box;
-
-                        @media (max-width: 1075px) {
-                            margin-left: 2em;
-                        }
                     }
                 }
-
-                
             }
 
             .phonebox {
@@ -317,7 +308,17 @@
             }
 
             @media (max-width: 1300px) {
-                left: 35em;
+                left: 55em;
+                top: 44em;
+            }
+
+            @media (max-width: 1250px) {
+                left: 55em;
+                top: 44em;
+            }
+
+            @media (max-width: 1200px) {
+                left: 45em;
                 top: 44em;
             }
 
