--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -231,18 +231,16 @@
             .mailbox {
                 animation: fade-in-left 0.75s ease-in-out;
                 max-width: 100%;
-
+                margin-left: 44px;
+                margin-bottom: 0.5em;
+                margin-top: 1em;
+                                    @media (max-width: 1075px) {
+                        margin-left: 2em;
+                    }
 
                 .mail-phone {
                     font-size: 1.6em;
                     font-weight: 700;
-                    margin-left: 2.8em;
-                    margin-bottom: 0.5em;
-                    margin-top: 1em;
-
-                    @media (max-width: 1075px) {
-                        margin-left: 2em;
-                    }
                 }
 
                 a {
@@ -251,12 +249,12 @@
                     display: inline-block;
                     max-width: 100%;
                     overflow: hidden;
+                    margin-top: 1em;
 
                     .email {
                         white-space: nowrap;
                         text-overflow: ellipsis;
                         overflow: hidden;
-                        margin-left: 2em;
                         max-width: 100%;
                         display: inline-block;
                         box-sizing: border-box;
