Adjust width of contact info text container
Replaces max-width: 100% with width: clamp(50%, 25vw, 100%) for better responsive sizing of the contact info text container.

--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -255,7 +255,7 @@
                         white-space: nowrap;
                         text-overflow: ellipsis;
                         overflow: hidden;
-                        max-width: 100%;
+                        width: clamp(50%, 25vw, 100%);
                         display: inline-block;
                         box-sizing: border-box;
 
