Add tooltips and input maxlengths to forms
Introduced a help tooltip for the subtask field in the Kanban add task overlay and updated related styles. Added maxlength attributes to input fields in login and signup forms to limit input length. Adjusted padding in various SCSS files to improve input field appearance.

--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.scss
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.scss
@@ -203,6 +203,7 @@
                                 border-radius: 10px;
                                 margin-top: 20px;
                                 padding: 0 10px;
+                                padding-right: 40px;
                                 border: rgba(0, 0, 0, 0.109) 2px solid;
                                 transition: border 0.2s ease;
                                 @media(max-width:413px){
