--- a/src/app/kanban/kanban-add/right-addtask.scss
+++ b/src/app/kanban/kanban-add/right-addtask.scss
@@ -202,7 +202,47 @@
 
                 .subtask-span {
                     font-size: 16px;
-                    padding-bottom: 0.4em;
+                    position: relative;
+                    display: flex;
+                    align-items: center;
+
+                    .help-icon {
+                        height: 20px;
+                        padding: 0px 10px 0em 5px;
+                        cursor: pointer;
+                    }
+
+                    .hover-text {
+                        opacity: 0;
+                        visibility: hidden;
+                        position: absolute;
+                        left: 90px; // Passe die Position an
+                        top: -5px;
+                        background-color: #333;
+                        color: white;
+                        padding: 5px 10px;
+                        border-radius: 5px;
+                        font-size: 12px;
+                        white-space: nowrap;
+                        transition: opacity 0.3s ease, visibility 0.3s ease;
+                        z-index: 1000;
+
+                        // Tooltip-Pfeil
+                        &::before {
+                            content: '';
+                            position: absolute;
+                            left: -5px;
+                            top: 50%;
+                            transform: translateY(-50%);
+                            border: 5px solid transparent;
+                            border-right-color: #333;
+                        }
+                    }
+
+                    .help-icon:hover + .hover-text {
+                        opacity: 1;
+                        visibility: visible;
+                    }
                 }
 
                 .subtaskfield {
@@ -217,6 +257,7 @@
                     input {
                         width: 100%;
                         padding: 1em;
+                        padding-right: 4em;
                         height: 48px;
                         border: none;
                         font-size: 16px;
