--- a/src/app/kanban/kanban-board/kanban-board.component.scss
+++ b/src/app/kanban/kanban-board/kanban-board.component.scss
@@ -104,6 +104,7 @@ section {
 		width: 300px;
 		height: 50px;
 		padding-left: 20px;
+		padding-right: 70px;
 		outline: none;
 		border: 1.5px solid rgb(201, 201, 201);
 
