--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -185,7 +185,7 @@ section {
                     width: 74%;
                     min-height: 48px;
                     border-radius: 15px;
-                    padding: 0.5em;
+                    padding: 0.5em 2em 0.5em 0.5em;
                     font-size: 16px;
                     resize: none;
                     border: 2px solid rgba(0, 0, 0, 0.214);
