--- a/src/app/signup-overlay/signup-overlay.component.html
+++ b/src/app/signup-overlay/signup-overlay.component.html
@@ -20,23 +20,23 @@
       <div class="signup-form">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
           <div class="username-input allInputs" >
-            <input type="text" placeholder="Name" formControlName="username" [class.error-border]="form.get('username')?.invalid && form.get('username')?.touched" pattern="^[a-zA-ZäöüÄÖÜß]+ [a-zA-ZäöüÄÖÜß]+$" required>
+            <input type="text" placeholder="Name" maxlength="30" formControlName="username" [class.error-border]="form.get('username')?.invalid && form.get('username')?.touched" pattern="^[a-zA-ZäöüÄÖÜß]+ [a-zA-ZäöüÄÖÜß]+$" required>
             <img  class="absoluteimg" src="assets/img/sign-up/person.svg" alt="">
           </div>
           
           <div class="mail-input allInputs">
-            <input type="email" placeholder="Email" formControlName="email" [class.error-border]="form.get('email')?.invalid && form.get('email')?.touched"  required pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}">
+            <input type="email" placeholder="Email" maxlength="30" formControlName="email" [class.error-border]="form.get('email')?.invalid && form.get('email')?.touched"  required pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}">
             <img class="absoluteimg" src="assets/img/sign-up/mail.png" alt="">
           </div>
           
           <div class="password-input allInputs">
-            <input #pwInput [type]="showPassword ? 'text' : 'password'" placeholder="Password" formControlName="password" (focus)="isFocused = true " (blur)="isFocused = false" (input)="checkPasswordInput()" 
+            <input #pwInput [type]="showPassword ? 'text' : 'password'" placeholder="Password" maxlength="30" formControlName="password" (focus)="isFocused = true " (blur)="isFocused = false" (input)="checkPasswordInput()" 
             [class.error-border]="form.get('password')?.invalid && form.get('password')?.touched" minlength="6">
             <img  [src]="lockIconSrc" alt="Lock Icon" class="absoluteimg" (click)="checkLockClick(pwInput)">
           </div>
 
           <div class="confirm-password allInputs">
-            <input #pwInput [class.error-border]="(form.get('password')?.value !== form.get('confirmPassword')?.value && form.get('confirmPassword')?.touched) || (form.get('confirmPassword')?.invalid && form.get('confirmPassword')?.touched)" [type]="showPassword ? 'text' : 'password'" placeholder="Confirm Password" formControlName="confirmPassword" (focus)="isFocused = true" (blur)="isFocused = false" (input)="checkPasswordInput()" required>
+            <input maxlength="30" #pwInput [class.error-border]="(form.get('password')?.value !== form.get('confirmPassword')?.value && form.get('confirmPassword')?.touched) || (form.get('confirmPassword')?.invalid && form.get('confirmPassword')?.touched)" [type]="showPassword ? 'text' : 'password'" placeholder="Confirm Password" formControlName="confirmPassword" (focus)="isFocused = true" (blur)="isFocused = false" (input)="checkPasswordInput()" required>
             <img  [src]="lockIconSrc" alt="Lock Icon" class="absoluteimg" (click)="checkLockClick(pwInput)">
           </div>
           
@@ -51,7 +51,7 @@
 
           <div class="required checkbox-privacy">
             <div class="custom-checkbox">
-              <input formControlName="checkbox" type="checkbox" id="privacy" name="privacy" required />
+              <input formControlName="checkbox" maxlength="30" type="checkbox" id="privacy" name="privacy" required />
               @if(form.get('checkbox')?.touched && form.get('checkbox')?.invalid){
                 <span class="red">I accept the</span>
               }@else {
