--- a/src/app/shared/nav-footer/nav-footer.component.scss
+++ b/src/app/shared/nav-footer/nav-footer.component.scss
@@ -92,12 +92,13 @@ section {
     }
 
     footer {
-        height: 50dvh;
+        position: absolute;
         display: flex;
         margin-left: 3.5em;
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-end;
+        bottom: 2em;
 
         a {
             color: white;
