--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -33,7 +33,7 @@
                                         <label class="form-label">
                                             Due date<span class="required-asterisk">*</span>
                                         </label>
-                                        <input [(ngModel)]="taskList.dueDate" type="date" onkeydown="return false;" [min]="currentDate"
+                                        <input #picker (click)="picker.showPicker()" [(ngModel)]="taskList.dueDate" type="date" onkeydown="return false;" [min]="currentDate"
                                             name="dueDate" required #dueDate="ngModel"
                                             [class.errorborder]="!dueDate.valid && dueDate.touched" />
                                         <div class="invalid-input">
